--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,1 +1,3 @@
 include ':app'
+include ':easy-bluetooth-classic'
+project(':easy-bluetooth-classic').projectDir = new File(rootProject.projectDir, '../node_modules/easy-bluetooth-classic/android')
