--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "easy-bluetooth-classic": "^1.0.4",
     "expo": "^32.0.0",
     "expokit": "32.1.1",
     "react": "16.5.0",
