change to PureComponent

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expokit": "32.1.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "rn-why-did-you-update": "^0.0.8",
     "uuid": "^3.3.2",
     "why-did-you-update": "^1.0.6"
   },
